--- a/Interactive Prototype/doum-40a54c.webflow (1)/kakaot/course-tutorial.html
+++ b/Interactive Prototype/doum-40a54c.webflow (1)/kakaot/course-tutorial.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri May 15 2020 18:44:44 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat May 16 2020 08:07:45 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ebed8a91b3d51736bf00a93" data-wf-site="5ebe4f16b2eae40029cc9f99">
 <head>
   <meta charset="utf-8">
@@ -12,6 +12,8 @@
   <link href="../css/normalize.css" rel="stylesheet" type="text/css">
   <link href="../css/webflow.css" rel="stylesheet" type="text/css">
   <link href="../css/doum-40a54c.webflow.css" rel="stylesheet" type="text/css">
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Roboto:100,300,regular,500,700"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="../images/favicon.ico" rel="shortcut icon" type="image/x-icon">
@@ -24,7 +26,7 @@
       <div class="w-col w-col-6 w-col-small-6 w-col-tiny-6">
         <h1 class="heading-4">KakaoT</h1>
       </div>
-      <div class="w-col w-col-3 w-col-small-3 w-col-tiny-3"><img src="../images/kakaoT.png" width="49" srcset="../images/kakaoT-p-500.png 500w, ../images/kakaoT.png 512w" sizes="(max-width: 479px) 14vw, 49px" alt="" class="image-3"></div>
+      <div class="w-col w-col-3 w-col-small-3 w-col-tiny-3"><img src="../images/kakaoT.png" width="49" srcset="../images/kakaoT-p-500.png 500w, ../images/kakaoT.png 512w" sizes="(max-width: 479px) 14vw, 48.99305725097656px" alt="" class="image-3"></div>
     </div>
   </div>
   <div class="section-4">
