--- a/Interactive Prototype/doum-40a54c.webflow (1)/start/kakao-t-info.html
+++ b/Interactive Prototype/doum-40a54c.webflow (1)/start/kakao-t-info.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sat May 16 2020 08:07:45 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue May 19 2020 07:09:06 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ebf9d077a11420bd9a42983" data-wf-site="5ebe4f16b2eae40029cc9f99">
 <head>
   <meta charset="utf-8">
@@ -21,20 +21,20 @@
 </head>
 <body>
   <div class="columns-3 w-row">
-    <div class="w-col w-col-3 w-col-small-3 w-col-tiny-3"><img src="../images/angle-left-solid.svg" width="23" alt="" class="image-4"></div>
+    <div class="w-col w-col-3 w-col-small-3 w-col-tiny-3"><a href="../start/app-list.html" class="w-inline-block"><img src="../images/angle-left-solid.svg" width="23" alt="" class="image-4"></a></div>
     <div class="w-col w-col-6 w-col-small-6 w-col-tiny-6">
       <h1 class="heading-4">KakaoT</h1>
     </div>
-    <div class="w-col w-col-3 w-col-small-3 w-col-tiny-3"><img src="../images/kakaoT.png" width="49" srcset="../images/kakaoT-p-500.png 500w, ../images/kakaoT.png 512w" sizes="(max-width: 479px) 14vw, 48.99305725097656px" alt="" class="image-3"></div>
+    <div class="w-col w-col-3 w-col-small-3 w-col-tiny-3"><img src="../images/kakaoT.png" width="49" srcset="../images/kakaoT-p-500.png 500w, ../images/kakaoT.png 512w" sizes="(max-width: 479px) 14vw, 49.000003814697266px" alt="" class="image-3"></div>
   </div>
   <div class="section-11">
-    <div class="w-container"><img src="../images/kakaoT.png" width="222" srcset="../images/kakaoT-p-500.png 500w, ../images/kakaoT.png 512w" sizes="221.9965362548828px" alt="" class="image-19"></div>
+    <div class="w-container"><img src="../images/kakaoT.png" width="222" srcset="../images/kakaoT-p-500.png 500w, ../images/kakaoT.png 512w" sizes="(max-width: 479px) 61vw, 222.00001525878906px" alt="" class="image-19"></div>
   </div>
   <div class="container-7 w-container">
     <h1 class="heading-10">Kakao T</h1>
     <p class="paragraph-2">Korean transportation service application</p>
     <h1 class="heading-11">Supporting Tasks</h1>
-    <p class="paragraph-3">-taxi-hailing<br>  - designated driver booking<br>  - nearby parking space searching<br>  - real-time traffic information service</p>
+    <p class="paragraph-3">-Taxi-hailing<br>  - Designated driver booking<br>  - Nearby parking space searching<br>  - Real-time traffic information service</p>
   </div><a href="../kakaot/course/course-list.html" class="button-7 w-button">Continue</a>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js?site=5ebe4f16b2eae40029cc9f99" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="../js/webflow.js" type="text/javascript"></script>
