--- a/Interactive Prototype/doum-40a54c.webflow (1)/kakaotalk/tutorial/add-friends/tutorialguide.html
+++ b/Interactive Prototype/doum-40a54c.webflow (1)/kakaotalk/tutorial/add-friends/tutorialguide.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri May 15 2020 18:44:44 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun May 24 2020 07:04:46 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ebece4d6469f0185b1c2f5b" data-wf-site="5ebe4f16b2eae40029cc9f99">
 <head>
   <meta charset="utf-8">
@@ -12,6 +12,8 @@
   <link href="../../../css/normalize.css" rel="stylesheet" type="text/css">
   <link href="../../../css/webflow.css" rel="stylesheet" type="text/css">
   <link href="../../../css/doum-40a54c.webflow.css" rel="stylesheet" type="text/css">
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Open Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic","Roboto:100,300,regular,500,700"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="../../../images/favicon.ico" rel="shortcut icon" type="image/x-icon">
@@ -20,7 +22,7 @@
 <body class="body-2">
   <header id="hero-overlay" class="hero-overlay">
     <div class="centered-container w-container">
-      <h1 class="heading-6">Drag left or right to move between screens</h1><img src="../../../images/그림1_1.png" width="236" srcset="../../../images/그림1_1-p-500.png 500w, ../../../images/그림1_1.png 510w" sizes="(max-width: 479px) 64vw, 236px" alt="" class="image-9">
+      <h1 class="heading-6">Swipe left or right to move between screens</h1><img src="../../../images/그림1.png" width="236" srcset="../../../images/그림1-p-500.png 500w, ../../../images/그림1.png 510w" sizes="(max-width: 479px) 64vw, 236px" alt="" class="image-9">
       <div><a href="../../../kakaotalk/tutorial/add-friends/tutorial.html" class="button-2 w-button">Proceed</a></div>
     </div>
   </header>
