--- a/Interactive Prototype/doum-40a54c.webflow (1)/kakaot/course/course-list.html
+++ b/Interactive Prototype/doum-40a54c.webflow (1)/kakaot/course/course-list.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sat May 16 2020 08:07:45 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat May 23 2020 11:58:06 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ebed36f559c992e80ed12fd" data-wf-site="5ebe4f16b2eae40029cc9f99">
 <head>
   <meta charset="utf-8">
@@ -13,7 +13,7 @@
   <link href="../../css/webflow.css" rel="stylesheet" type="text/css">
   <link href="../../css/doum-40a54c.webflow.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Roboto:100,300,regular,500,700"]  }});</script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Open Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic","Roboto:100,300,regular,500,700"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="../../images/favicon.ico" rel="shortcut icon" type="image/x-icon">
@@ -21,91 +21,98 @@
 </head>
 <body class="course_list">
   <div>
-    <div class="columns-4 w-row">
-      <div class="w-col w-col-3 w-col-small-3 w-col-tiny-3"><img src="../../images/angle-left-solid.svg" width="23" alt="" class="image-4"></div>
-      <div class="w-col w-col-6 w-col-small-6 w-col-tiny-6">
-        <h1 class="heading-4">Kakao T</h1>
-      </div>
-      <div class="w-col w-col-3 w-col-small-3 w-col-tiny-3"><img src="../../images/kakaoT.png" width="49" srcset="../../images/kakaoT-p-500.png 500w, ../../images/kakaoT.png 512w" sizes="(max-width: 479px) 14vw, 48.99305725097656px" alt="" class="image-3"></div>
-    </div>
-  </div><img src="../../images/Screen-Shot-2020-05-16-at-1.41.09-PM.png" height="10" srcset="../../images/Screen-Shot-2020-05-16-at-1.41.09-PM.png 500w, ../../images/Screen-Shot-2020-05-16-at-1.41.09-PM.png 718w" sizes="100vw" alt="" class="image-12">
-  <div class="section-7">
-    <div class="columns-6 w-row">
-      <div class="w-col w-col-3 w-col-tiny-3">
-        <h1 class="heading-9">  1</h1>
-      </div>
-      <div class="w-col w-col-9 w-col-tiny-9">
-        <h1 class="heading-8">Download and Log-in</h1>
+    <div class="kakaot-topbar">
+      <div class="columns-12 w-row">
+        <div class="w-col w-col-3 w-col-tiny-3"><img src="../../images/angle-left-solid.svg" width="29" id="to_list" alt="" class="exit"><a href="../../start/app-list.html" class="button-13 w-button">Button Text</a></div>
+        <div class="w-col w-col-6 w-col-tiny-6">
+          <h1 class="heading-21">Kakao T</h1>
+        </div>
+        <div class="w-col w-col-3 w-col-tiny-3"><img src="../../images/kakaoT.png" width="49" srcset="../../images/kakaoT-p-500.png 500w, ../../images/kakaoT.png 512w" sizes="(max-width: 479px) 17vw, 48.99305725097656px" alt="" class="image-44"></div>
       </div>
     </div>
   </div>
-  <div class="section-7">
-    <div class="columns-6 w-row">
-      <div class="w-col w-col-3 w-col-tiny-3">
-        <h1 class="heading-9">  2</h1>
-      </div>
-      <div class="w-col w-col-9 w-col-tiny-9">
-        <h1 class="heading-8">Add Account</h1>
+  <div class="div-block-9">
+    <div class="progressbar">
+      <div class="div-block-10 probar1 list">
+        <div class="div-block-10 probar1 probar2"></div>
       </div>
     </div>
-  </div>
-  <section id="goto_course" class="section-7" data-ix="new-interaction">
-    <div class="columns-6 w-row">
-      <div class="w-col w-col-3 w-col-tiny-3">
-        <a href="../../kakaot/course/course-screen-1.html" class="w-inline-block">
-          <h1 class="heading10"> 3 </h1>
-        </a>
-      </div>
-      <div class="w-col w-col-9 w-col-tiny-9">
-        <h1 class="heading-8">Call a Taxi</h1>
+    <div class="courses">
+      <div class="columns-6 w-row">
+        <div class="w-col w-col-3 w-col-tiny-3">
+          <h1 class="heading-9">  1</h1>
+        </div>
+        <div class="w-col w-col-9 w-col-tiny-9">
+          <h1 class="heading-8">Download and <br>Log-in</h1>
+        </div>
       </div>
     </div>
-  </section>
-  <div class="locked">
-    <div class="columns-6 w-row">
-      <div class="w-col w-col-3 w-col-tiny-3"><img src="../../images/Screen-Shot-2020-05-16-at-1.15.03-PM.png" alt="" class="image-11"></div>
-      <div class="w-col w-col-9 w-col-tiny-9">
-        <h1 class="heading-8">Call a Black Taxi</h1>
+    <div class="courses">
+      <div class="columns-6 w-row">
+        <div class="w-col w-col-3 w-col-tiny-3">
+          <h1 class="heading-9">  2</h1>
+        </div>
+        <div class="w-col w-col-9 w-col-tiny-9">
+          <h1 class="heading-8">Add Account</h1>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="locked">
-    <div class="columns-6 w-row">
-      <div class="w-col w-col-3 w-col-tiny-3"><img src="../../images/Screen-Shot-2020-05-16-at-1.15.03-PM.png" alt="" class="image-11"></div>
-      <div class="w-col w-col-9 w-col-tiny-9">
-        <h1 class="heading-8">Call a chaffuer service</h1>
+    <section id="goto_course" class="courses" data-ix="new-interaction">
+      <div id="take" class="columns-6 w-row">
+        <div class="w-col w-col-3 w-col-tiny-3">
+          <a href="../../kakaot/course/course-screen-1.html" class="w-inline-block">
+            <h1 class="heading10"> 3 </h1>
+          </a>
+        </div>
+        <div class="w-col w-col-9 w-col-tiny-9"><a href="../../kakaot/course/course-screen-1.html" class="link">Call a Taxi</a></div>
+      </div>
+    </section>
+    <div class="courses">
+      <div class="columns-6 w-row">
+        <div class="w-col w-col-3 w-col-tiny-3"><img src="../../images/Screen-Shot-2020-05-16-at-1.15.03-PM.png" alt="" class="image-11"></div>
+        <div class="w-col w-col-9 w-col-tiny-9">
+          <h1 class="heading-8">Call a Black Taxi</h1>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="locked">
-    <div class="columns-6 w-row">
-      <div class="w-col w-col-3 w-col-tiny-3"><img src="../../images/Screen-Shot-2020-05-16-at-1.15.03-PM.png" alt="" class="image-11"></div>
-      <div class="w-col w-col-9 w-col-tiny-9">
-        <h1 class="heading-8">Kakao Bike</h1>
+    <div class="courses">
+      <div class="columns-6 w-row">
+        <div class="w-col w-col-3 w-col-tiny-3"><img src="../../images/Screen-Shot-2020-05-16-at-1.15.03-PM.png" alt="" class="image-11"></div>
+        <div class="w-col w-col-9 w-col-tiny-9">
+          <h1 class="heading-8">Navigation Service</h1>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="locked">
-    <div class="columns-6 w-row">
-      <div class="w-col w-col-3 w-col-tiny-3"><img src="../../images/Screen-Shot-2020-05-16-at-1.15.03-PM.png" alt="" class="image-11"></div>
-      <div class="w-col w-col-9 w-col-tiny-9">
-        <h1 class="heading-8">Find a parking lot</h1>
+    <div class="courses">
+      <div class="columns-6 w-row">
+        <div class="w-col w-col-3 w-col-tiny-3"><img src="../../images/Screen-Shot-2020-05-16-at-1.15.03-PM.png" alt="" class="image-11"></div>
+        <div class="w-col w-col-9 w-col-tiny-9">
+          <h1 class="heading-8">Kakao Bike</h1>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="locked">
-    <div class="columns-6 w-row">
-      <div class="w-col w-col-3 w-col-tiny-3"><img src="../../images/Screen-Shot-2020-05-16-at-1.15.03-PM.png" alt="" class="image-11"></div>
-      <div class="w-col w-col-9 w-col-tiny-9">
-        <h1 class="heading-8">Navigation Service</h1>
+    <div class="courses">
+      <div class="columns-6 w-row">
+        <div class="w-col w-col-3 w-col-tiny-3"><img src="../../images/Screen-Shot-2020-05-16-at-1.15.03-PM.png" alt="" class="image-11"></div>
+        <div class="w-col w-col-9 w-col-tiny-9">
+          <h1 class="heading-8">Find a shuttle bus</h1>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="locked">
-    <div class="columns-6 w-row">
-      <div class="w-col w-col-3 w-col-tiny-3"><img src="../../images/Screen-Shot-2020-05-16-at-1.15.03-PM.png" alt="" class="image-11"></div>
-      <div class="w-col w-col-9 w-col-tiny-9">
-        <h1 class="heading-8">Find a shuttle bus</h1>
+    <div class="courses">
+      <div class="columns-6 w-row">
+        <div class="w-col w-col-3 w-col-tiny-3"><img src="../../images/Screen-Shot-2020-05-16-at-1.15.03-PM.png" alt="" class="image-11"></div>
+        <div class="w-col w-col-9 w-col-tiny-9">
+          <h1 class="heading-8">Find a parking lot</h1>
+        </div>
+      </div>
+    </div>
+    <div class="courses">
+      <div class="columns-6 w-row">
+        <div class="w-col w-col-3 w-col-tiny-3"><img src="../../images/Screen-Shot-2020-05-16-at-1.15.03-PM.png" alt="" class="image-11"></div>
+        <div class="w-col w-col-9 w-col-tiny-9">
+          <h1 class="heading-8">Call a chaffuer service</h1>
+        </div>
       </div>
     </div>
   </div>
