--- a/Interactive Prototype/doum-40a54c.webflow (1)/kakaot/course/course-list.html
+++ b/Interactive Prototype/doum-40a54c.webflow (1)/kakaot/course/course-list.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sat May 23 2020 11:58:06 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Jun 13 2020 02:29:30 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ebed36f559c992e80ed12fd" data-wf-site="5ebe4f16b2eae40029cc9f99">
 <head>
   <meta charset="utf-8">
@@ -21,13 +21,17 @@
 </head>
 <body class="course_list">
   <div>
-    <div class="kakaot-topbar">
+    <div class="columns-9 kttop list">
       <div class="columns-12 w-row">
-        <div class="w-col w-col-3 w-col-tiny-3"><img src="../../images/angle-left-solid.svg" width="29" id="to_list" alt="" class="exit"><a href="../../start/app-list.html" class="button-13 w-button">Button Text</a></div>
+        <div class="w-col w-col-3 w-col-tiny-3">
+          <a href="../../start/kakao-t-info.html" class="link-block-10 w-inline-block">
+            <div class="text-block-6"></div>
+          </a>
+        </div>
         <div class="w-col w-col-6 w-col-tiny-6">
           <h1 class="heading-21">Kakao T</h1>
         </div>
-        <div class="w-col w-col-3 w-col-tiny-3"><img src="../../images/kakaoT.png" width="49" srcset="../../images/kakaoT-p-500.png 500w, ../../images/kakaoT.png 512w" sizes="(max-width: 479px) 17vw, 48.99305725097656px" alt="" class="image-44"></div>
+        <div class="w-col w-col-3 w-col-tiny-3"><img src="../../images/kakaoT.png" width="49" srcset="../../images/kakaoT-p-500.png 500w, ../../images/kakaoT.png 512w" sizes="(max-width: 479px) 17vw, 49px" alt="" class="image-44"></div>
       </div>
     </div>
   </div>
@@ -58,7 +62,7 @@
       </div>
     </div>
     <section id="goto_course" class="courses" data-ix="new-interaction">
-      <div id="take" class="columns-6 w-row">
+      <div id="take" class="columns-6 cur w-row">
         <div class="w-col w-col-3 w-col-tiny-3">
           <a href="../../kakaot/course/course-screen-1.html" class="w-inline-block">
             <h1 class="heading10"> 3 </h1>
@@ -110,7 +114,7 @@
     <div class="courses">
       <div class="columns-6 w-row">
         <div class="w-col w-col-3 w-col-tiny-3"><img src="../../images/Screen-Shot-2020-05-16-at-1.15.03-PM.png" alt="" class="image-11"></div>
-        <div class="w-col w-col-9 w-col-tiny-9">
+        <div class="column-6 w-col w-col-9 w-col-tiny-9">
           <h1 class="heading-8">Call a chaffuer service</h1>
         </div>
       </div>
