--- a/Interactive Prototype/doum-40a54c.webflow (1)/kakaot/course/course-screen-1.html
+++ b/Interactive Prototype/doum-40a54c.webflow (1)/kakaot/course/course-screen-1.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sat May 23 2020 11:58:06 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Jun 13 2020 02:29:30 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ebed37df90f4b6a17f7bec1" data-wf-site="5ebe4f16b2eae40029cc9f99">
 <head>
   <meta charset="utf-8">
@@ -19,10 +19,14 @@
   <link href="../../images/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="../../images/webclip.png" rel="apple-touch-icon">
 </head>
-<body>
-  <div class="kakaot-topbar">
+<body class="body-7">
+  <div class="columns-9 kttop list">
     <div class="columns-12 w-row">
-      <div class="w-col w-col-3 w-col-tiny-3"><img src="../../images/angle-left-solid.svg" width="29" alt="" class="exit"><a href="../../start/app-list.html" class="button-13 w-button">Button Text</a></div>
+      <div class="w-col w-col-3 w-col-tiny-3">
+        <a href="../../kakaot/course/course-list.html" class="link-block-11 w-inline-block">
+          <div class="text-block-6"></div>
+        </a>
+      </div>
       <div class="w-col w-col-6 w-col-tiny-6">
         <h1 class="heading-21">Kakao T</h1>
       </div>
@@ -30,12 +34,12 @@
     </div>
   </div>
   <div class="div-block-9">
-    <div class="progressbar">
+    <div class="progressbar change">
       <div class="div-block-10 couse">
         <div class="div-block-10 probar1 probar2 move"></div>
       </div>
     </div>
-    <div data-animation="slide" data-duration="500" data-infinite="1" class="slider-5 w-slider">
+    <div data-animation="slide" data-hide-arrows="1" data-nav-spacing="10" data-duration="500" class="slider-5 w-slider">
       <div class="w-slider-mask">
         <div data-w-id="1ad34e24-a004-d660-067c-4d6157ec0eae" class="slide1 w-slide">
           <div id="vertical" class="div-block-13">
@@ -58,17 +62,16 @@
           </div>
         </div>
         <div data-w-id="f4f0d46b-a5e1-af03-a6ff-8f3be85d567d" class="ending w-slide">
-          <div class="section-15"><img src="../../images/KakaoTalk_Photo_2020-05-23-15-56-01.gif" width="342" alt="" class="complete"></div>
-          <div class="section-16"><a href="../../kakaot/course/course-list.html" class="coursebtn w-button">Return to Course List</a><a href="../../kakaot/course/course-screen-1.html" aria-current="page" class="coursebtn _1 w-button w--current">Retake this Course</a></div>
+          <div class="section-15"><img src="../../images/KakaoTalk_Photo_2020-05-23-15-56-01.gif" width="281" alt="" class="complete"><a href="../../kakaot/course/course-list.html" class="button-16 w-button">Return to Couse List</a><a href="../../kakaot/course/course-screen-1.html" aria-current="page" class="coursebtn _1 w-button w--current">Retake this Course</a></div>
         </div>
       </div>
-      <div class="w-slider-arrow-left">
+      <div class="left-arrow-2 w-slider-arrow-left">
         <div class="icon-4 w-icon-slider-left"></div>
       </div>
-      <div class="w-slider-arrow-right">
+      <div class="right-arrow-2 w-slider-arrow-right">
         <div class="icon-5 w-icon-slider-right"></div>
       </div>
-      <div class="w-slider-nav w-round"></div>
+      <div class="slide-nav-3 w-slider-nav w-slider-nav-invert w-shadow w-round w-num"></div>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js?site=5ebe4f16b2eae40029cc9f99" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
