--- a/Interactive Prototype/doum-40a54c.webflow (1)/kakaotalk/tutorial/add-friends/tutorial.html
+++ b/Interactive Prototype/doum-40a54c.webflow (1)/kakaotalk/tutorial/add-friends/tutorial.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun May 24 2020 07:04:46 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Jun 13 2020 09:42:28 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ebe4f902d562c1681a0ea74" data-wf-site="5ebe4f16b2eae40029cc9f99">
 <head>
   <meta charset="utf-8">
@@ -57,12 +57,13 @@
             <div class="slide-2 w-slide"><img src="../../../images/3.png" width="317" srcset="../../../images/3-p-500.png 500w, ../../../images/3.png 569w" sizes="(max-width: 479px) 81vw, 317px" alt="" class="image-5">
               <h2 class="heading-2">Add Friends</h2>
             </div>
+            <div class="w-slide"><img src="../../../images/KakaoTalk_Photo_2020-05-23-15-56-01.gif" width="281" alt="" class="complete"><a href="../../../kakaotalk/tutorial/categories.html" class="button-2 w-button">Go back to categories</a><a href="../../../kakaotalk/tutorial/add-friends/tutorial.html" aria-current="page" class="button-15 w-button w--current">Go to first page</a></div>
           </div>
           <div class="w-slider-arrow-left">
-            <div class="w-icon-slider-left"></div>
+            <div class="icon-8 w-icon-slider-left"></div>
           </div>
           <div class="w-slider-arrow-right">
-            <div class="w-icon-slider-right"></div>
+            <div class="icon-7 w-icon-slider-right"></div>
           </div>
           <div class="slide-nav w-slider-nav w-slider-nav-invert w-round"></div>
         </div>
